Common Service: Refactor response with fields code, status and data